<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) Technify Pte Ltd - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by Lee Quee Leong <leequeeleong@technify.com.sg> and
  ~ Seah Siu Ngee <seahsiungee@techinify.com.sg, May 2015
  -->

<resources>

    <!-- Demo Text -->
    <string name="title_activity_activity">activity</string>
    <string name="title_activity_collection">collection</string>
    <string name="display_fragment">Hello fragment</string>
    <string name="collection">Collection</string>
    <string name="external_activity">External Activity</string>
    <string name="companyName">Four Seasons Chicken</string>
    <string name="url">www.google.com</string>
    <string name="tel">60001234</string>
    <string name="address">"Peach Garden @ Thomson Plaza\n301 Upper Thomson Road\n#01-88, Thomson Plaza\nSingapore 574408"</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="long_text">To celebrate SG50, Spizza is offering a fantastic 50 cents pizza promotion from the 3rd to the 7th of August 2015.
        With every 10 or 12-inch pizza ordered at full price, diners can enjoy a second 10-inch pizza at 50 cents!</string>
    <string name="very_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
        qui officia deserunt mollit anim id est laborum.</string>
    <string name="dealName">Buy One Get One Free</string>

    <string name="app_name">DingGo</string>
    <string name="facebook_app_id">1613874552196379</string>
    <!-- Font -->
    <string name="font_normal">fonts/Nexa Light.otf</string>

    <!-- Login Page -->
    <string name="hint_username"><i>Username/ Email</i></string>
    <string name="hint_password"><i>Password</i></string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="skip_button">Skip this to trial</string>
    <string name="facebookText">Connect with us on Facebook</string>

    <string name="no_username_toast">Please enter a username to login or register</string>
    <string name="no_password_toast">Please enter a password to login or register</string>
    <string name="length_of_password_toast">Password need to be more than 8 characters in length, please reenter your password</string>
    <string name="login_success_toast">You have successfully logged into DingGo</string>
    <string name="login_failed_invalid_credential_toast">Invalid username/password.\nPlease try again</string>
    <string name="login_failed_server_error_toast">Unable to connect to server due to network issues</string>
    <string name="login_failed_unknown_toast">Could not log in, please try again later</string>

    <string name="sign_up_failed_invalid_email">Email address is invalid, please correct it and try again</string>
    <string name="sign_up_failed_username_taken">Username is already been taken, please enter a different one</string>
    <string name="sign_up_failed_email_taken">Email is already been taken, please enter a different email</string>

    <!-- Customer landing page -->
    <string name="customer_optionText_1">Eat &amp; Drink</string>
    <string name="customer_optionText_2">Watch</string>
    <string name="customer_optionText_3">Play</string>
    <string name="customer_optionText_4">Buy</string>
    <string name="customer_optionText_5">Dinged</string>
    <string name="customer_optionText_6">Preferences</string>

    <!-- Map Fragment -->
    <string name="advancedFilter"><u>Advanced Filter</u></string>

    <!-- ActionBar Titles -->
    <string name="eatDrink_tabText_1">All</string>
    <string name="eatDrink_tabText_2">Merchants</string>
    <string name="eatDrink_tabText_3">Map</string>
    <string name="dingedDeals_tabText_1">Ongoing</string>
    <string name="dingedDeals_tabText_2">Rewards</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_eat_drink">Eat &amp; Drink</string>
    <string name="title_activity_customer_deal_details">Deal Details</string>

    <!-- Nav Drawer Menu Items -->
    <string name="navdrawer_item_eat_and_drink">Eat &amp; Drink</string>
    <string name="navdrawer_item_dinged_deals">Dinged Deals</string>
    <string name="navdrawer_item_preferences">Preferences</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_image">icon</string>
    <string name="navdrawer_item_menu">Menu</string>

    <!--CustomerViewAll-->
    <string name="noDeals">There are no deals at this moment, try again later.</string>

    <!--DealDetails-->
    <string name="dealImage">dealImage</string>
    <string name="seatsOffered">"Seats \nOffered"</string>
    <string name="timeLeft">"To Claim"</string>
    <string name="redeemBy">"Redeem \nBy"</string>
    <string name="dingFor">"Ding For:"</string>
    <string name="dingThisDeal">Ding This Deal</string>
    <string name="dealDescriptionDivider">Deal Description</string>
    <string name="readMore">Read More</string>
    <string name="aboutMerchantDivider">About Merchant</string>
    <string name="allReviews">All Reviews</string>
    <string name="dealDetailsTitle">Deal Details</string>
    <string name="dealTCDivider">Terms &amp; Conditions</string>

    <!--Reviews-->
    <string name="overall">Overall</string>
    <string name="foodDrink">Food &amp; Drink</string>
    <string name="value">Value</string>
    <string name="ambience">Ambience</string>
    <string name="service">Service</string>
    <string name="noReviews">There are no reviews for this merchant.</string>
    <string name="reviews">Reviews</string>

    <!-- Dinged Deals -->
    <string name="noDingedDeals">You have no dinged deals at this moment.</string>
    <string name="noRewards">You have no rewards to claim at this moment.</string>

    <!--All Merchant-->
    <string name="noMerchants">There are currently no merchants to be displayed.</string>

    <!-- Dialog String Config -->
    <string name="response_yes">Yes</string>
    <string name="response_no">No</string>

    <!-- Preferences - Notification Management -->
    <string name="AlertTitle">Alert Me</string>
    <string name="AlertRadio_1">Preferred Deals</string>
    <string name="AlertRadio_2">All Deals</string>
    <string name="AlertRadio_3">No to be missed Deals</string>
    <string name="AlertRadio_4">No Deals</string>
    <string name="ProximityTitle">Deal Proximity</string>
    <string name="placeholder_lorem_ipsum">lorem</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_customer_dinged_deal">Dinged Deal Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_customer_preferences">Preferences</string>
    <string name="title_activity_customer_preference_manage_deals">CustomerPreferenceManageDeals</string>
    <string name="title_activity_customer_preference_eat">CustomerPreferenceEat</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_activity_dinged_deals">Dinged Deals</string>
    <string name="title_activity_customer_preference">Customer Preference</string>
    <string name="title_activity_merchant_reviews">Merchant Reviews</string>
    <string name="title_activity_merchant_details">Merchant Details</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
