<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dealDescriptionDivider">

        <View style="@style/DealDescriptionHeaderDivider" />
        <TextView
            android:id="@+id/dealDescriptionDividerTV"
            style="@style/DealDescriptionHeader"
            android:text="@string/dealDescriptionDivider" />
        <View style="@style/DealDescriptionHeaderDivider" />

    </LinearLayout>

    <TextView
        android:id="@+id/dealDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text"
        android:maxLines="5"
        android:ellipsize="end"
        android:textSize="@dimen/text_size_medium"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/readMore"
        android:textSize="@dimen/text_size_large"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/theme_primary"
        android:id="@+id/readMore" />

</LinearLayout>