<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/fake_actionbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/theme_primary">
        <ImageView
            android:id="@+id/closeDealDetailsDialog"
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:clickable="true" />
        <TextView
            android:id="@+id/dealDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dealDetailsTitle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge"
            android:gravity="center" />
    </LinearLayout>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:id="@+id/dealDescriptionDivider">

                <View style="@style/DealDescriptionHeaderDivider" />
                <TextView
                    android:id="@+id/dealDescriptionDividerTV"
                    style="@style/DealDescriptionHeader"
                    android:text="@string/dealDescriptionDivider"/>
                <View style="@style/DealDescriptionHeaderDivider" />
            </LinearLayout>

            <TextView
                android:id="@+id/dealDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/text_size_medium"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:id="@+id/dealTCDivider"
                android:paddingBottom="10dp">
                <View style="@style/DealDescriptionHeaderDivider" />
                <TextView
                    android:id="@+id/dealTCDividerTV"
                    style="@style/DealDescriptionHeader"
                    android:text="@string/dealTCDivider" />
                <View style="@style/DealDescriptionHeaderDivider" />
            </LinearLayout>

            <TextView
                android:id="@+id/dealTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_long_text"
                android:textSize="@dimen/text_size_medium"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>