<!--
  ~ Copyright (C) Technify Pte Ltd - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by Lee Quee Leong <leequeeleong@technify.com.sg> and
  ~ Seah Siu Ngee <seahsiungee@techinify.com.sg, May 2015
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView android:id="@+id/appIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/bellred"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appIcon"
        android:text="@string/app_name"
        android:textSize="35dp"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <EditText android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="text"
        android:layout_centerVertical="true"
        android:layout_below="@+id/app_name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:hint="@string/hint_username"
        android:maxLength="@integer/username_max_char"
        android:gravity="center" />

    <EditText android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_below="@+id/username"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:hint="@string/hint_password"
        android:maxLength="@integer/password_max_char"
        android:gravity="center"/>
    <LinearLayout
        android:layout_below="@+id/password"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/red"
        android:id="@+id/login_register_buttons"
        android:orientation="horizontal">

        <Button android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:background="@color/red"
            android:textSize="@dimen/text_size_large"
            android:textAllCaps="true"
            android:layout_weight="1" />

        <View style="@style/vDivider"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_weight="1"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <Button android:id="@+id/skip"
        android:layout_below="@+id/login_register_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/skip_button"
        android:background="@drawable/border"
        android:textColor="@color/theme_primary"
        android:textSize="@dimen/text_size_large" />

    <View android:layout_height="1px"
        android:layout_width="fill_parent"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/facebook"
        android:id="@+id/separator2" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/facebook"
        android:layout_marginBottom="-4dp"
        android:text="Or"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"/>

    <LinearLayout android:id="@+id/facebook"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:src="@drawable/facebook"
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <TextView android:id="@+id/facebookText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/facebook_color"
            android:text="@string/facebookText"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:clickable="true"/>
    </LinearLayout>

</RelativeLayout>
