<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.example.leon.dingoapplication.Activities.MainActivity" >

    <ImageView android:id="@+id/appIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/bellred"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appIcon"
        android:text="@string/app_name"
        android:textSize="35dp"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <EditText android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="text"
        android:layout_centerVertical="true"
        android:layout_below="@+id/app_name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:textSize="20dp"
        android:hint="@string/hint_username"
        android:gravity="center" />

    <EditText android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_below="@+id/username"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:hint="@string/hint_password"
        android:gravity="center"/>

    <Button android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_below="@+id/password"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/registerText"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:clickable="true"
        android:textSize="15dp" />

</RelativeLayout>
