<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/merchantReviewsSingleRow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingRight="15dp"
                android:text="username" />
            <TextView
                android:id="@+id/reviewedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingLeft="5dp"
                android:paddingRight="15dp"
                android:text="14 Jul 2015" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/overall"
                android:layout_gravity="center_vertical|right" />
            <RatingBar
                android:id="@+id/userOverallRating"
                style="@style/RatingBar.Small"
                android:isIndicator="true"
                android:rating="4"
                android:layout_gravity="center_vertical|right"
                android:stepSize="0.5" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/review_dealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/dealName"
        android:layout_gravity="center">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/foodAndDrinkTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="@string/foodDrink" />
                <RatingBar
                    android:id="@+id/foodAndDrinkRB"
                    style="@style/RatingBar.Small"
                    android:isIndicator="true"
                    android:rating="4"
                    android:stepSize="0.5" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/valueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="@string/value" />
                <RatingBar
                    android:id="@+id/valueRB"
                    style="@style/RatingBar.Small"
                    android:isIndicator="true"
                    android:rating="4"
                    android:stepSize="0.5" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/ambienceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="@string/ambience" />
                <RatingBar
                    android:id="@+id/ambienceRB"
                    style="@style/RatingBar.Small"
                    android:isIndicator="true"
                    android:rating="4"
                    android:stepSize="0.5" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/serviceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="@string/service" />
                <RatingBar
                    android:id="@+id/serviceRB"
                    style="@style/RatingBar.Small"
                    android:isIndicator="true"
                    android:rating="4"
                    android:stepSize="0.5" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/userReviewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text"
        android:maxLines="5"
        android:textSize="14sp"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:gravity="center"/>
</LinearLayout>