<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageView
                    android:id="@+id/companyCoverImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/coverfourseasonschicken"
                    android:scaleType="centerCrop"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                    android:gravity="bottom|center_horizontal"
                    android:contentDescription="@string/dealImage"
                    app:layout_collapseMode="parallax"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradientbackground"
                    app:layout_collapseMode="parallax"/>
                <ImageView
                    android:id="@+id/favouriteIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border_white"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/dealImage"
                    android:layout_margin="10dp" />
                <!--<ImageView
                    android:id="@+id/companyLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/dealImage"
                    android:src="@drawable/fourseasonschicken"/>-->
                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyName"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_above="@+id/merchantOverallRating"
                    android:paddingBottom="5dp" />
                <RatingBar
                    android:id="@+id/merchantOverallRating"
                    style="@style/RatingBar.Small"
                    android:isIndicator="true"
                    android:rating="4"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="10dp" />
            </RelativeLayout>
            <TextView
                android:id="@+id/companyDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/long_text"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_margin="20dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>